# esp32_awho

./: .gitmodules  CMakeLists.txt  Makefile  README.md  hardcopy.0  sdkconfig  toflash.c
components/libtelnet/: CMakeLists.txt  component.mk
main/: CMakeLists.txt  awho.c  echo.c  emulwIP.c  lwip_ethoc.c
